# CuadraHardware

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: generate-assets.ps1  license.rtf  tester.html
config/: config.example.json
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  README.md  SECURITY.md  TESTER.md  TROUBLESHOOTING.md
installer/: CuadraPOSAgent.iss  Product.wxs  build-installer.ps1  build-release-zip.ps1  manage-service.ps1
installer/package/: Install.ps1  LEEME.txt
src/: config.rs  main.rs  security.rs  server.rs  service.rs
src/printer/: mod.rs  network.rs  serial.rs  windows_spooler.rs
