[package]
name = "cuadra-pos-agent"
version = "0.1.4"
edition = "2024"
description = "Agente local seguro de hardware para Cuadra POS"
authors = ["Cuadra ERP"]
license = "Proprietary"

[dependencies]
axum = { version = "0.8", features = ["json"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
getrandom = "0.3"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net", "fs", "io-util"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_Printing", "Win32_Security"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
